--- a/cv/fr/index.html
+++ b/cv/fr/index.html
@@ -33,7 +33,7 @@
 
         <div id="contactDetails" class="quickFade delayFour">
             <ul>
-                <li>Email: <a href="mailto:cupidcb@gmail.com" target="_blank">cupidcb@gmail.com</a></li>
+                <li>Email: <a href="mailto:cupidcb@gmail.com" target="_blank">Mon mail</a></li>
                 <li>Site: <a href="http://cui-bo.github.io">cui-bo.github.io</a></li>
                 <li>Mobile: 06********</li>
             </ul>
@@ -205,9 +205,9 @@
             <div class="sectionContent">
                 <article>
                     <ul>
-                        <li>D&eacute;veloppement de nouveaux technologies(NodeJs, AngularJs, NOSQL, IOS, Android)</li>
+                        <li>D&eacute;veloppement de nouveaux technologies(Kafka, Java SpringBoot, Angular, Divers Database)</li>
                         <li>Sport d'&eacute;quipe(Basket, Foot)</li>
-                        <li>DIY Voyage(Nice, Strasbourg, Amsterdam, Barcelone, Zurich, Brussel, Mal&eacute;))</li>
+                        <li>DIY Voyage(Nice, Strasbourg, Amsterdam, Barcelone, Zurich, Brussel, Mal&eacute;)</li>
                     </ul>
                 </article>
             </div>
